@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@ package gc.z;
 
 /*
  * @test TestSmallHeap
- * @requires vm.gc.ZGenerational
+ * @requires vm.gc.Z
  * @summary Test ZGC with small heaps
  * @library / /test/lib
  * @run driver gc.z.TestSmallHeap 16M 32M 64M 128M 256M 512M 1024M
@@ -54,8 +54,9 @@ public class TestSmallHeap {
     public static void main(String[] args) throws Exception {
         for (var maxCapacity: args) {
             ProcessTools.executeTestJava(
+                // Disable NUMA to avoid potential OOM after JDK-8359683
+                "-XX:-UseNUMA",
                 "-XX:+UseZGC",
-                "-XX:+ZGenerational",
                 "-Xlog:gc,gc+init,gc+reloc,gc+heap",
                 "-Xmx" + maxCapacity,
                 Test.class.getName())
