@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,15 +20,6 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-import java.security.AccessControlException;
-import java.security.AccessController;
-import java.security.CodeSource;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.PrivilegedAction;
-import java.security.ProtectionDomain;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Enumeration;
@@ -39,7 +30,6 @@ import java.util.Queue;
 import java.util.ResourceBundle;
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Supplier;
 import java.util.logging.Handler;
@@ -47,47 +37,23 @@ import java.util.logging.LogRecord;
 import java.lang.System.LoggerFinder;
 import java.lang.System.Logger;
 import java.lang.System.Logger.Level;
-import java.util.stream.Stream;
 import sun.util.logging.PlatformLogger;
 
 /**
  * @test
- * @bug     8140364
+ * @bug 8140364
  * @summary JDK implementation specific unit test for JDK internal artifacts.
  *          Tests all bridge methods from PlatformLogger with a custom
  *          backend whose loggers implement PlatformLogger.Bridge.
  * @modules java.base/sun.util.logging
  *          java.logging
  * @build CustomSystemClassLoader LogProducerFinder PlatformLoggerBridgeTest
- * @run  main/othervm -Djava.system.class.loader=CustomSystemClassLoader PlatformLoggerBridgeTest NOSECURITY
- * @run  main/othervm -Djava.security.manager=allow -Djava.system.class.loader=CustomSystemClassLoader PlatformLoggerBridgeTest NOPERMISSIONS
- * @run  main/othervm -Djava.security.manager=allow -Djava.system.class.loader=CustomSystemClassLoader PlatformLoggerBridgeTest WITHPERMISSIONS
- * @author danielfuchs
+ * @run  main/othervm -Djava.system.class.loader=CustomSystemClassLoader PlatformLoggerBridgeTest
  */
 public class PlatformLoggerBridgeTest {
 
-    static final RuntimePermission LOGGERFINDER_PERMISSION =
-                new RuntimePermission("loggerFinder");
     final static AtomicLong sequencer = new AtomicLong();
     final static boolean VERBOSE = false;
-    static final ThreadLocal<AtomicBoolean> allowControl = new ThreadLocal<AtomicBoolean>() {
-        @Override
-        protected AtomicBoolean initialValue() {
-            return  new AtomicBoolean(false);
-        }
-    };
-    static final ThreadLocal<AtomicBoolean> allowAccess = new ThreadLocal<AtomicBoolean>() {
-        @Override
-        protected AtomicBoolean initialValue() {
-            return  new AtomicBoolean(false);
-        }
-    };
-    static final ThreadLocal<AtomicBoolean> allowAll = new ThreadLocal<AtomicBoolean>() {
-        @Override
-        protected AtomicBoolean initialValue() {
-            return  new AtomicBoolean(false);
-        }
-    };
 
     public static final Queue<LogEvent> eventQueue = new ArrayBlockingQueue<>(128);
 
@@ -473,117 +439,24 @@ public class PlatformLoggerBridgeTest {
 
     }
 
-    static enum TestCases {NOSECURITY, NOPERMISSIONS, WITHPERMISSIONS};
-
-    static void setSecurityManager() {
-        if (System.getSecurityManager() == null) {
-            Policy.setPolicy(new SimplePolicy(allowControl, allowAccess, allowAll));
-            System.setSecurityManager(new SecurityManager());
-        }
-    }
-
     public static void main(String[] args) {
-        if (args.length == 0)
-            args = new String[] {
-                //"NOSECURITY",
-                "NOPERMISSIONS",
-                "WITHPERMISSIONS"
-            };
 
-
-        Stream.of(args).map(TestCases::valueOf).forEach((testCase) -> {
-            LoggerFinder provider;
-            switch (testCase) {
-                case NOSECURITY:
-                    System.out.println("\n*** Without Security Manager\n");
-                    provider = LoggerFinder.getLoggerFinder();
-                    test(provider, true);
-                    System.out.println("Tetscase count: " + sequencer.get());
-                    break;
-                case NOPERMISSIONS:
-                    System.out.println("\n*** With Security Manager, without permissions\n");
-                    setSecurityManager();
-                    try {
-                        provider = LoggerFinder.getLoggerFinder();
-                        throw new RuntimeException("Expected exception not raised");
-                    } catch (AccessControlException x) {
-                        if (!LOGGERFINDER_PERMISSION.equals(x.getPermission())) {
-                            throw new RuntimeException("Unexpected permission check", x);
-                        }
-                        final boolean control = allowControl.get().get();
-                        try {
-                            allowControl.get().set(true);
-                            provider = LoggerFinder.getLoggerFinder();
-                        } finally {
-                            allowControl.get().set(control);
-                        }
-                    }
-                    test(provider, false);
-                    System.out.println("Tetscase count: " + sequencer.get());
-                    break;
-                case WITHPERMISSIONS:
-                    System.out.println("\n*** With Security Manager, with access permission\n");
-                    setSecurityManager();
-                    final boolean control = allowControl.get().get();
-                    try {
-                        allowControl.get().set(true);
-                        provider = LoggerFinder.getLoggerFinder();
-                    } finally {
-                        allowControl.get().set(control);
-                    }
-                    final boolean access = allowAccess.get().get();
-                    try {
-                        allowAccess.get().set(true);
-                        test(provider, true);
-                    } finally {
-                        allowAccess.get().set(access);
-                    }
-                    break;
-                default:
-                    throw new RuntimeException("Unknown test case: " + testCase);
-            }
-        });
+        System.out.println("\n*** Without Security Manager\n");
+        LoggerFinder provider = LoggerFinder.getLoggerFinder();
+        test(provider);
+        System.out.println("Tetscase count: " + sequencer.get());
         System.out.println("\nPASSED: Tested " + sequencer.get() + " cases.");
     }
 
-    public static void test(LoggerFinder provider, boolean hasRequiredPermissions) {
+    public static void test(LoggerFinder provider) {
 
         final Map<PlatformLogger, String> loggerDescMap = new HashMap<>();
 
-        PlatformLogger sysLogger1 = null;
-        try {
-            sysLogger1 = PlatformLogger.getLogger("foo");
-            loggerDescMap.put(sysLogger1, "PlatformLogger.getLogger(\"foo\")");
-            if (!hasRequiredPermissions) {
-                throw new RuntimeException("Managed to obtain a system logger without permission");
-            }
-        } catch (AccessControlException acx) {
-            if (hasRequiredPermissions) {
-                throw new RuntimeException("Unexpected security exception: ", acx);
-            }
-            if (!acx.getPermission().equals(SimplePolicy.ACCESS_LOGGING)) {
-                throw new RuntimeException("Unexpected permission in exception: " + acx, acx);
-            }
-            final boolean old = allowAccess.get().get();
-            allowAccess.get().set(true);
-            try {
-                sysLogger1 = PlatformLogger.getLogger("foo");
-                loggerDescMap.put(sysLogger1, "PlatformLogger.getLogger(\"foo\")");
-            } finally {
-                allowAccess.get().set(old);
-            }
-            System.out.println("Got expected exception for system logger: " + acx);
-        }
+        PlatformLogger sysLogger1 = PlatformLogger.getLogger("foo");
+        loggerDescMap.put(sysLogger1, "PlatformLogger.getLogger(\"foo\")");
 
-        final LoggerImpl sysSink;
-        boolean old = allowControl.get().get();
-        allowControl.get().set(true);
-        try {
-           sysSink = LoggerImpl.class.cast(
-                        provider.getLogger("foo", Thread.class.getModule()));
-        } finally {
-            allowControl.get().set(old);
-        }
+        final LoggerImpl sysSink = LoggerImpl.class.cast(
+                provider.getLogger("foo", Thread.class.getModule()));
 
         testLogger(provider, loggerDescMap, "foo", null, sysLogger1, sysSink);
     }
@@ -770,92 +643,6 @@ public class PlatformLoggerBridgeTest {
                     checkLogEvent(provider, desc2, expected);
                 }
             }
-        }
-    }
-
-    final static class PermissionsBuilder {
-        final Permissions perms;
-        public PermissionsBuilder() {
-            this(new Permissions());
-        }
-        public PermissionsBuilder(Permissions perms) {
-            this.perms = perms;
-        }
-        public PermissionsBuilder add(Permission p) {
-            perms.add(p);
-            return this;
-        }
-        public PermissionsBuilder addAll(PermissionCollection col) {
-            if (col != null) {
-                for (Enumeration<Permission> e = col.elements(); e.hasMoreElements(); ) {
-                    perms.add(e.nextElement());
-                }
-            }
-            return this;
-        }
-        public Permissions toPermissions() {
-            final PermissionsBuilder builder = new PermissionsBuilder();
-            builder.addAll(perms);
-            return builder.perms;
-        }
-    }
-
-    public static class SimplePolicy extends Policy {
-        final static RuntimePermission CONTROL = LOGGERFINDER_PERMISSION;
-        final static RuntimePermission ACCESS_LOGGER = new RuntimePermission("accessClassInPackage.jdk.internal.logger");
-        final static RuntimePermission ACCESS_LOGGING = new RuntimePermission("accessClassInPackage.sun.util.logging");
-
-        static final Policy DEFAULT_POLICY = Policy.getPolicy();
-
-        final Permissions permissions;
-        final Permissions allPermissions;
-        final ThreadLocal<AtomicBoolean> allowControl;
-        final ThreadLocal<AtomicBoolean> allowAccess;
-        final ThreadLocal<AtomicBoolean> allowAll;
-        public SimplePolicy(ThreadLocal<AtomicBoolean> allowControl,
-                ThreadLocal<AtomicBoolean> allowAccess,
-                ThreadLocal<AtomicBoolean> allowAll) {
-            this.allowControl = allowControl;
-            this.allowAccess = allowAccess;
-            this.allowAll = allowAll;
-            permissions = new Permissions();
-            allPermissions = new PermissionsBuilder()
-                    .add(new java.security.AllPermission())
-                    .toPermissions();
-        }
-
-        Permissions getPermissions() {
-            if (allowControl.get().get() || allowAccess.get().get() || allowAll.get().get()) {
-                PermissionsBuilder builder =  new PermissionsBuilder()
-                        .addAll(permissions);
-                if (allowControl.get().get()) {
-                    builder.add(CONTROL);
-                }
-                if (allowAccess.get().get()) {
-                    builder.add(ACCESS_LOGGER);
-                    builder.add(ACCESS_LOGGING);
-                }
-                if (allowAll.get().get()) {
-                    builder.addAll(allPermissions);
-                }
-                return builder.toPermissions();
-            }
-            return permissions;
-        }
-
-        @Override
-        public boolean implies(ProtectionDomain domain, Permission permission) {
-            return getPermissions().implies(permission) || DEFAULT_POLICY.implies(domain, permission);
-        }
-
-        @Override
-        public PermissionCollection getPermissions(CodeSource codesource) {
-            return new PermissionsBuilder().addAll(getPermissions()).toPermissions();
-        }
-
-        @Override
-        public PermissionCollection getPermissions(ProtectionDomain domain) {
-            return new PermissionsBuilder().addAll(getPermissions()).toPermissions();
         }
     }
 }
