@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,7 +30,6 @@
  * @key randomness
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestRawRSACipher
- * @run main/othervm -Djava.security.manager=allow TestRawRSACipher sm
  */
 
 import java.security.GeneralSecurityException;
@@ -41,6 +40,8 @@ import java.util.Arrays;
 import java.util.HexFormat;
 import java.util.Random;
 import javax.crypto.Cipher;
+import jdk.test.lib.security.SecurityUtils;
+import jtreg.SkippedException;
 
 public class TestRawRSACipher extends PKCS11Test {
 
@@ -49,12 +50,12 @@ public class TestRawRSACipher extends PKCS11Test {
         try {
             Cipher.getInstance("RSA/ECB/NoPadding", p);
         } catch (GeneralSecurityException e) {
-            System.out.println("Not supported by provider, skipping");
-            return;
+            throw new SkippedException("Algorithm RSA/ECB/NoPadding is not supported by provider, skipping");
         }
 
-        final int KEY_LEN = 1024;
-        KeyPairGenerator kpGen = KeyPairGenerator.getInstance("RSA", p);
+        String kpgAlgorithm = "RSA";
+        final int KEY_LEN = SecurityUtils.getTestKeySize(kpgAlgorithm);
+        KeyPairGenerator kpGen = KeyPairGenerator.getInstance(kpgAlgorithm, p);
         kpGen.initialize(KEY_LEN);
         KeyPair kp = kpGen.generateKeyPair();
         Random random = new Random();
@@ -64,7 +65,8 @@ public class TestRawRSACipher extends PKCS11Test {
         plainText[0] = 0; // to ensure that it's less than modulus
 
         Cipher c1 = Cipher.getInstance("RSA/ECB/NoPadding", p);
-        Cipher c2 = Cipher.getInstance("RSA/ECB/NoPadding", "SunJCE");
+        Cipher c2 = Cipher.getInstance("RSA/ECB/NoPadding",
+                        System.getProperty("test.provider.name", "SunJCE"));
 
         c1.init(Cipher.ENCRYPT_MODE, kp.getPublic());
         c2.init(Cipher.DECRYPT_MODE, kp.getPrivate());
