@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,8 +28,9 @@
  * @library /test/lib ..
  * @modules jdk.crypto.cryptoki
  * @run main/othervm SupportedDHKeys
- * @run main/othervm -Djava.security.manager=allow SupportedDHKeys sm
  */
+
+import jtreg.SkippedException;
 
 import java.math.BigInteger;
 import java.security.KeyPair;
@@ -63,8 +64,7 @@ public class SupportedDHKeys extends PKCS11Test {
     @Override
     public void main(Provider provider) throws Exception {
         if (provider.getService("KeyPairGenerator", "DiffieHellman") == null) {
-            System.out.println("No support of DH KeyPairGenerator, skipping");
-            return;
+           throw new SkippedException("No support of DH KeyPairGenerator, skipping");
         }
 
         for (SupportedKeySize keySize : SupportedKeySize.values()) {
